--- a/Web/src/client/index.html
+++ b/Web/src/client/index.html
@@ -9,11 +9,12 @@
 		<meta http-equiv="expires" content="0" />
 		<meta http-equiv="pragma" content="no-cache" />
 		<!---->
-		<title>AgriSense Hub</title>
+		<title>AgriSense</title>
 	</head>
 
 	<body>
 		<noscript> You need to enable JavaScript to run this app. </noscript>
 		<div id="root"></div>
+		<script type="module" src="/src/index.tsx"></script>
 	</body>
 </html>
